2005-09-20 Till Tantau <tantau@users.sourceforget.net>

	CVS:

	- Added transparency to PGF (quite nice)...
	- Fixed problem with \\ in centered text.

2005-09-08 Till Tantau <tantua@users.sourceforget.net>

	Version 0.97:

	- Reorganised directory structure of documentation.
	- Added tree mechanism.
	- Added snake mechanism.
	- Added layer mechanism.
	- Added new shapes: cross out, strike out, forbidden sign.
	- Added some more documentation.
	- Added "none" drawing and filling colors.
	- Added pgflibrarytikzbackgrounds.
	- Changed syntax of \pgfqbox.
	- Changed syntax of several \pgfsys@xxxx commands.
	- Added SVG support / a tex4ht backend. (Complicated text
  	  inside svg graphics is not supported well, but that's mainly
	  a shortcoming of the svg specification.)

2005-07-06 Till Tantau <tantau@users.sourceforge.net>

	Version 0.96:

	This is a beta version. Version 1.00 will be the first stable
	version of TikZ/pgf.
	
	- Fixed spacing problem in dvips.
	- Changed syntax of plot and plot marks.
	- Changed syntax of ellipse and elliptical arc options.
	- Fixed baseline bug in tikz.
	- Fixed bug in pgfpages.
	- Introduced "every xxxx" styles, got rid of shape actions option.
	- Added "intersection of" syntax for coordinates.
	- Started revising the documentation.
	- Changed names of some pgfpages commands.
	- Changed syntax of parabola command.
	- Proof read documentation.

2005-06-12 Till Tantau <tantau@users.sourceforge.net>

	Version 0.95:

	This is an *alpha* prerelease version. Syntax changes
	are still possible before the beta version. Version 1.00
	will be the stable version.

	Changes (this is almost a new program):
	- Introduced three layers: system, basic, frontends.
	- Wrote two frontends: TikZ (*most* useful!) and pgfpict2e (a
	  demonstration).
	- Largely rewrote the basic layer.
	- Largely rewrote the system layer.
	- Completely rewrote the documentation.
	- Added two utilities: pgfpages and pgffor.
	- Made macro naming more consistent.