@@ -1,4 +1,4 @@
-\ProvidesFileRCS $Header: /home/nmelzer/projects/TeX/pgf/generic/pgf/systemlayer/pgfsys-common-pdf.def,v 1.2 2005/09/21 00:05:34 tantau Exp $
+\ProvidesFileRCS $Header: /home/nmelzer/projects/TeX/pgf/generic/pgf/systemlayer/pgfsys-common-pdf.def,v 1.3 2005/09/30 07:14:03 tantau Exp $
 
 % Copyright 2005 by Till Tantau <tantau@cs.tu-berlin.de>.
 %
@@ -59,11 +59,14 @@
 
 % Opacity
 \def\pgf@sys@pdf@addtopageresources#1{\pgf@sys@fail}
+\def\pgf@sys@pdf@readdtopageresources#1{}% not always used
 \def\pgfsys@stroke@opacity#1{%
   \expandafter\ifx\csname pgf@sys@pdf@so@#1\endcsname\relax%
     % Hmm... define...
     \expandafter\gdef\csname pgf@sys@pdf@so@#1\endcsname{/pgf@CA#1}%
     \pgf@sys@pdf@addtopageresources{/pgf@CA#1 << /CA #1 >>}%
+  \else%
+    \pgf@sys@pdf@readdtopageresources{/pgf@CA#1 << /CA #1 >>}%
   \fi%
   \pgfsysprotocol@literal{\csname pgf@sys@pdf@so@#1\endcsname\space gs}%  
 }
@@ -72,6 +75,8 @@
     % Hmm... define...
     \expandafter\gdef\csname pgf@sys@pdf@fo@#1\endcsname{/pgf@ca#1}%
     \pgf@sys@pdf@addtopageresources{/pgf@ca#1 << /ca #1 >>}%
+  \else%
+    \pgf@sys@pdf@readdtopageresources{/pgf@ca#1 << /ca #1 >>}%
   \fi%
   \pgfsysprotocol@literal{\csname pgf@sys@pdf@fo@#1\endcsname\space gs}%  
 }
