@@ -1,4 +1,4 @@
-\ProvidesFileRCS $Header: /home/nmelzer/projects/TeX/pgf/generic/pgf/systemlayer/pgfsys-common-postscript.def,v 1.2 2005/09/21 21:16:50 tantau Exp $
+\ProvidesFileRCS $Header: /home/nmelzer/projects/TeX/pgf/generic/pgf/systemlayer/pgfsys-common-postscript.def,v 1.3 2005/09/30 07:14:03 tantau Exp $
 
 % Copyright 2005 by Till Tantau <tantau@cs.tu-berlin.de>.
 %
@@ -141,42 +141,13 @@
 
 % Opacity
 
-\newif\ifpgf@sys@dvips@warning@given
-\def\pgf@sys@dvips@warning{%
-  \ifpgf@sys@dvips@warning@given%
-  \else%
-    \global\pgf@sys@dvips@warning@giventrue%
-    \PackageWarning{pgf}{You are trying to use opacity with
-      PostScript, which is not allowed by the standard. PGF uses
-      GhostScript's non-portable extensions to support it
-      anyway. These extensions are not supported by printers or anyone
-      else. I felt obliged to tell you this once}% 
-  \fi%
-}
-\def\pgfsys@@fill@opacity#1{%
-  \pgf@sys@dvips@warning%
+\def\pgfsys@fill@opacity#1{%
   \pgfsysprotocol@literal{/pgffill{gsave #1 .setopacityalpha fill grestore}def}%
   \pgfsysprotocol@literal{/pgfeofill{gsave #1 .setopacityalpha eofill grestore}def}%
 }
-\def\pgfsys@@stroke@opacity#1{%
-  \pgf@sys@dvips@warning%
+\def\pgfsys@stroke@opacity#1{%
   \pgfsysprotocol@literal{/pgfstr{gsave #1 .setopacityalpha stroke grestore}def}%
 }
-
-\let\pgfsys@fill@opacity=\pgfsys@@fill@opacity
-\let\pgfsys@stroke@opacity=\pgfsys@@stroke@opacity
-
-\def\pgfsysghostviewopacityfalse{%
-  \let\pgfsys@fill@opacity=\@gobble
-  \let\pgfsys@stroke@opacity=\@gobble
-}
-
-\def\pgfsysghostviewopacitytrue{%
-  \let\pgfsys@fill@opacity=\pgfsys@@fill@opacity
-  \let\pgfsys@stroke@opacity=\pgfsys@@stroke@opacity
-}
-
-
 
 \endinput
 
