@@ -1,4 +1,4 @@
-\ProvidesFileRCS $Header: /home/nmelzer/projects/TeX/pgf/generic/pgf/systemlayer/pgfsys-dvips.def,v 1.6 2005/09/21 21:16:50 tantau Exp $
+\ProvidesFileRCS $Header: /home/nmelzer/projects/TeX/pgf/generic/pgf/systemlayer/pgfsys-dvips.def,v 1.7 2005/09/30 07:14:03 tantau Exp $
 
 % Copyright 2005 by Till Tantau <tantau@cs.tu-berlin.de>.
 %
@@ -146,6 +146,7 @@
     /pgfc{newpath @endspecial pgfpd}B %close
     /pgfsd{globaldict /pgfdelta /delta where {pop delta} {0} ifelse put}B% save delta
     /pgfpd{/delta globaldict /pgfdelta get def}B % put delta
+    /.setopacityalpha where {pop} {/.setopacityalpha{pop}def} ifelse % install .setopacityalpha 
     end
     }
   
